offer an Acl object on Plans, as the REST API does